# tensorflow

./: MODULE.bazel  WORKSPACE
tensorflow/: workspace2.bzl  workspace3.bzl
